// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput renders empty 1`] = `
<SearchInput
  accentColor="#00f"
  className=""
  communityName=""
  list={null}
  onAddTag={[Function]}
  onChange={[Function]}
  onClose={[Function]}
  query=""
>
  <SearchInput__Slider
    className=""
  >
    <div
      className="SearchInput__Slider-sc-1cm9pl1-1 dvqkWL"
    >
      <SearchInput__Wrapper>
        <div
          className="SearchInput__Wrapper-sc-1cm9pl1-2 bDWavq"
        >
          <SearchInput__IconSearch>
            <_default
              className="SearchInput__IconSearch-sc-1cm9pl1-4 ddGjjW"
            >
              <_default
                className="SearchInput__IconSearch-sc-1cm9pl1-4 ddGjjW"
              >
                <div
                  className="SearchInput__IconSearch-sc-1cm9pl1-4 ddGjjW"
                />
              </_default>
            </_default>
          </SearchInput__IconSearch>
          <SearchInput__Input
            autoFocus={true}
            onChange={[Function]}
            placeholder="Searching "
          >
            <input
              autoFocus={true}
              className="SearchInput__Input-sc-1cm9pl1-3 gJpafQ"
              onChange={[Function]}
              placeholder="Searching "
            />
          </SearchInput__Input>
          <SearchInput__IconClose
            onClick={[Function]}
          >
            <_default
              className="SearchInput__IconClose-sc-1cm9pl1-5 giikgz"
              onClick={[Function]}
            >
              <_default
                className="SearchInput__IconClose-sc-1cm9pl1-5 giikgz"
                onClick={[Function]}
              >
                <div
                  className="SearchInput__IconClose-sc-1cm9pl1-5 giikgz"
                  onClick={[Function]}
                />
              </_default>
            </_default>
          </SearchInput__IconClose>
        </div>
      </SearchInput__Wrapper>
    </div>
  </SearchInput__Slider>
</SearchInput>
`;

exports[`SearchInput renders with props 1`] = `
<SearchInput
  accentColor="#00f"
  className="foo"
  communityName="bar"
  list={
    Array [
      Object {
        "articleId": "1",
        "articleTitle": "Foo",
      },
      Object {
        "articleId": "2",
        "articleTitle": "Bar",
      },
      Object {
        "articleId": "3",
        "articleTitle": "FooBar",
      },
    ]
  }
  onAddTag={[Function]}
  onChange={[Function]}
  onClose={[Function]}
  query="q"
>
  <SearchInput__Slider
    className="foo"
  >
    <div
      className="SearchInput__Slider-sc-1cm9pl1-1 dvqkWL foo"
    >
      <SearchInput__Wrapper>
        <div
          className="SearchInput__Wrapper-sc-1cm9pl1-2 bDWavq"
        >
          <SearchInput__IconSearch>
            <_default
              className="SearchInput__IconSearch-sc-1cm9pl1-4 ddGjjW"
            >
              <_default
                className="SearchInput__IconSearch-sc-1cm9pl1-4 ddGjjW"
              >
                <div
                  className="SearchInput__IconSearch-sc-1cm9pl1-4 ddGjjW"
                />
              </_default>
            </_default>
          </SearchInput__IconSearch>
          <SearchInput__Input
            autoFocus={true}
            onChange={[Function]}
            placeholder="Searching bar"
          >
            <input
              autoFocus={true}
              className="SearchInput__Input-sc-1cm9pl1-3 gJpafQ"
              onChange={[Function]}
              placeholder="Searching bar"
            />
          </SearchInput__Input>
          <SearchInput__List
            accentColor="#00f"
            bigItems={false}
            boldItems={false}
            className=""
            hasEllipsis={false}
            isLinked={false}
            linesBetween={false}
          >
            <ul
              className="StyledList-sc-1t1k18i-0 SearchInput__List-sc-1cm9pl1-0 kHMAEM"
            >
              <li
                key="1"
                onClick={[Function]}
              >
                <HighlightedText
                  highlight="q"
                  text="Foo"
                >
                  <span
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Foo",
                      }
                    }
                  />
                </HighlightedText>
              </li>
              <li
                key="2"
                onClick={[Function]}
              >
                <HighlightedText
                  highlight="q"
                  text="Bar"
                >
                  <span
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "Bar",
                      }
                    }
                  />
                </HighlightedText>
              </li>
              <li
                key="3"
                onClick={[Function]}
              >
                <HighlightedText
                  highlight="q"
                  text="FooBar"
                >
                  <span
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "FooBar",
                      }
                    }
                  />
                </HighlightedText>
              </li>
            </ul>
          </SearchInput__List>
          <SearchInput__IconClose
            onClick={[Function]}
          >
            <_default
              className="SearchInput__IconClose-sc-1cm9pl1-5 giikgz"
              onClick={[Function]}
            >
              <_default
                className="SearchInput__IconClose-sc-1cm9pl1-5 giikgz"
                onClick={[Function]}
              >
                <div
                  className="SearchInput__IconClose-sc-1cm9pl1-5 giikgz"
                  onClick={[Function]}
                />
              </_default>
            </_default>
          </SearchInput__IconClose>
        </div>
      </SearchInput__Wrapper>
    </div>
  </SearchInput__Slider>
</SearchInput>
`;
